# arm-free-rtos

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  dev  main.cpp  startup.s
.githooks/: pre-commit
.github/workflows/: ci.yaml
app/: AppQueues.cpp  ButtonTask.cpp  InputController.cpp  UILock.cpp  main.cpp  reformat.cpp
app/include/: AppQueues.h  UILock.h
docs/: debouncer.md
modules/: Debouncer.cpp  Debouncer.h  InputEvent.h
platform/: Buttons.cpp  LEDMatrix.cpp  handlers.c  linker.ld  mem.c  startup.s
platform/include/: Buttons.h  LEDMatrix.h  mb2_board.h
rtos/: hooks.c
rtos/include/: FreeRTOSConfig.h
scripts/: ci-check-format.sh  dev-format.sh  dev-setup.sh  dev-test.sh
src/app/: app_queues.cpp  button_task.cpp  input_controller.cpp  logger.cpp  main.cpp  ui_lock.cpp
src/app/include/: app_queues.h  lock.h  ui_lock.h
src/drivers/: button.cpp  uart.cpp
src/drivers/include/: Uart.h  button.h
src/include/: input_type.h
src/modules/: debouncer.cpp  debouncer.h
src/platform/: button.cpp  led_matrix.cpp  uart_hw.cpp
src/platform/include/: button_hw.h  led_matrix.h  microbit_ver_2.h
src/rtos/include/: FreeRTOSConfig.h
tests/: button_test.cpp  test_main.c
